src/test/resources/shell/shellSyntaxErr/function/functionMissingType.wacc
# program missing return type of function

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

  f() is
    return 0 
  end
  int x = call f()

